Fixing 'Download on the App Store' button visibility

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -81,7 +81,9 @@ img {
         }
 
         .apple-link {
-            height: 40px;
+            img {
+                height: 40px;
+            }
         }
 
         .android-link {
